--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="twitter:description" content="Найдите идеальное место для проживания с вашей семьей">
     <meta name="twitter:image" content="https://rybuhome.com/assets/img/hero.webp">
     <link rel="canonical" href="https://rybuhome.com/">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
